--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
             </div>
             <button type="submit" class="btn btn-success">Register</button>
             <div class="mt-2">
-                <p>you have account? <a href="index.html">Login</a></p>
+                <p>you have account? <a href="/index.html">Login</a></p>
             </div>
         </form>
     </div>
